@@ -1,71 +1,87 @@
 package com.logy.pantheon.features.commands.blackjack;
 
+import com.logy.pantheon.config.PantheonConfig;
 import com.logy.pantheon.features.commands.economy.Economy;
-import com.logy.pantheon.features.commands.main.GameInstance;
+import com.logy.pantheon.features.commands.main.BaseGame;
 import com.logy.pantheon.utils.ChatUtils;
+
 import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
 
-public class BlackjackGame implements GameInstance {
-    private GameState state = GameState.FINISHED;
+public class BlackjackGame extends BaseGame {
 
+    private static final PantheonConfig CONFIG = PantheonConfig.get();
+
+    private enum BlackjackPhase {
+        BETTING, INSURANCE, PLAYER_TURNS, DEALER_TURN
+    }
+
+    private BlackjackPhase phase = BlackjackPhase.BETTING;
+    private long phaseStartTime = 0;
     private final Deck deck = new Deck();
     private final List<HandSession> activeHands = new CopyOnWriteArrayList<>();
     private final List<Card> dealerHand = new ArrayList<>();
     private final Map<String, Integer> insuranceBets = new HashMap<>();
-
-    private boolean gameActive = false;
-    private long stateStartTime = 0;
     private int currentHandIndex = 0;
 
-    private static final int MAX_BET = 1000000;
-    private static final int MIN_BET = 10;
-    private static final long BETTING_TIME_MS = 11000;
-    private static final long TURN_TIME_MS = 30000;
-    private static final long INSURANCE_TIME_MS = 8000;
+    private int getMaxBet(){
+        return CONFIG.BLACKJACK_MAX_BET;
+    }
+    private int getMinBet(){
+        return CONFIG.BLACKJACK_MIN_BET;
+    }
+    private int getBettingTime(){
+        return CONFIG.BLACKJACK_BETTING_TIME_S * 1000;
+    }
+    private int getTurnTime(){
+        return CONFIG.BLACKJACK_TURN_TIME_S * 1000;
+    }
+    private int getInsuranceTime(){
+        return CONFIG.BLACKJACK_INSURANCE_TIME_S * 1000;
+    }
 
-    public void start() {
-        if (gameActive) return;
-        gameActive = true;
-        state = GameState.BETTING;
-        stateStartTime = System.currentTimeMillis();
 
+    @Override
+    protected String getName() {
+        return "Blackjack";
+    }
+
+    @Override
+    protected void onStart() {
+        phase = BlackjackPhase.BETTING;
+        resetPhaseTimer();
         activeHands.clear();
         dealerHand.clear();
         insuranceBets.clear();
         currentHandIndex = 0;
 
-        ChatUtils.sendPartyMessage("BLACKJACK! Betting open (10s). Type .bet <amount>");
+        send("Betting open (" + getBettingTime()/1000 + "s). Type .bet <amount>");
+    }
+
+    private void resetPhaseTimer() {
+        this.phaseStartTime = now();
     }
 
     @Override
-    public void handleChat(String sender, String content) {
-        String msg = content.toLowerCase().trim();
+    protected void onChat(String sender, String message) {
+        String msg = message.toLowerCase().trim();
 
-        if (state == GameState.BETTING && msg.startsWith(".bet")) {
+        if (phase == BlackjackPhase.BETTING && msg.startsWith(".bet")) {
             handleBet(sender, msg);
-            return;
-        }
-
-        if (state == GameState.INSURANCE && msg.equals(".ins")) {
+        } else if (phase == BlackjackPhase.INSURANCE && msg.equals(".ins")) {
             handleInsurance(sender);
-            return;
+        } else if (phase == BlackjackPhase.PLAYER_TURNS) {
+            handlePlayerAction(sender, msg);
         }
+    }
 
-        if (state == GameState.PLAYER_TURNS) {
-            if (currentHandIndex >= activeHands.size()) return;
-            HandSession currentHand = activeHands.get(currentHandIndex);
-
-            if (!sender.equalsIgnoreCase(currentHand.playerName)) return;
-            if (currentHand.finished) return;
-
-            processAction(currentHand, msg);
-        }
+    private boolean isBlackjack(List<Card> hand) {
+        return hand.size() == 2 && calculateScore(hand) == 21;
     }
 
     private void handleBet(String sender, String msg) {
         if (activeHands.stream().anyMatch(h -> h.playerName.equalsIgnoreCase(sender))) {
-            ChatUtils.sendPartyMessage(sender + ", you already placed a bet!");
+            send(sender + ", you already placed a bet!");
             return;
         }
 
@@ -73,60 +89,19 @@ public class BlackjackGame implements GameInstance {
             String[] parts = msg.split(" ");
             int amount = parts.length > 1 ? Integer.parseInt(parts[1]) : 100;
 
-            if (amount < MIN_BET || amount > MAX_BET) {
-                ChatUtils.sendPartyMessage("Bet: " + MIN_BET + " - " + MAX_BET);
+            if (amount < getMinBet() || amount > getMaxBet()) {
+                send("Bet limit: " + getMinBet() + " - " + getMaxBet());
                 return;
             }
 
             if (Economy.takeMoney(sender, amount)) {
                 activeHands.add(new HandSession(sender, amount));
-                ChatUtils.sendPartyMessage(sender + " joined with " + amount);
+                send(sender + " joined with " + amount);
             } else {
-                ChatUtils.sendPartyMessage(sender + ", you don't have enough money!");
+                send(sender + ", insufficient funds!");
             }
         } catch (NumberFormatException e) {
-            ChatUtils.sendPartyMessage("Usage: .bet <amount>");
-        }
-    }
-
-    private void beginMatch() {
-        if (activeHands.isEmpty()) {
-            stop();
-            return;
-        }
-
-        deck.reset();
-        for (HandSession hand : activeHands) {
-            hand.cards.add(deck.draw());
-            hand.cards.add(deck.draw());
-            ChatUtils.sendPartyMessage(hand.playerName + " received: " + hand.cards + " (" + calculateScore(hand.cards) + ")");
-        }
-
-        dealerHand.add(deck.draw());
-        dealerHand.add(deck.draw());
-
-        ChatUtils.sendPartyMessage("Dealer's hand: " + dealerHand.getFirst() + " [?]");
-
-        if (dealerHand.getFirst().getRank() == Rank.ACE) {
-            state = GameState.INSURANCE;
-            resetTimer();
-            ChatUtils.sendPartyMessage("Dealer shows ACE. .ins to buy insurance (8s).");
-        } else {
-            state = GameState.PLAYER_TURNS;
-            resetTimer();
-            processTurns();
-        }
-    }
-
-    private void processAction(HandSession hand, String msg) {
-        switch (msg) {
-            case ".hit" -> handleHit(hand);
-            case ".stand" -> {
-                hand.finished = true;
-                processTurns();
-            }
-            case ".double" -> handleDouble(hand);
-            case ".split" -> handleSplit(hand);
+            send("Usage: .bet <amount>");
         }
     }
 
@@ -140,8 +115,64 @@ public class BlackjackGame implements GameInstance {
         int insAmount = playerHand.get().bet / 2;
         if (Economy.takeMoney(playerName, insAmount)) {
             insuranceBets.put(playerName, insAmount);
-            ChatUtils.sendPartyMessage(playerName + " bought Insurance.");
+            send(playerName + " bought Insurance.");
         }
+    }
+
+    private void handlePlayerAction(String sender, String msg) {
+        if (currentHandIndex >= activeHands.size()) return;
+        HandSession currentHand = activeHands.get(currentHandIndex);
+
+        if (!sender.equalsIgnoreCase(currentHand.playerName) || currentHand.finished) return;
+
+        switch (msg) {
+            case ".hit" -> handleHit(currentHand);
+            case ".stand" -> {
+                currentHand.finished = true;
+                processTurns();
+            }
+            case ".double" -> handleDouble(currentHand);
+            case ".split" -> handleSplit(currentHand);
+        }
+    }
+
+    private void beginMatch() {
+        if (activeHands.isEmpty()) {
+            stop(StopReason.ERROR);
+            send("No players joined. Game cancelled.");
+            return;
+        }
+
+        deck.reset();
+        for (HandSession hand : activeHands) {
+            hand.cards.add(deck.draw());
+            hand.cards.add(deck.draw());
+            if (isBlackjack(hand.cards)) {
+                send("✮ " + hand.playerName + " has BLACKJACK!" + hand.cards);
+                hand.finished = true;
+            } else {
+                send(hand.playerName + " received: " + hand.cards + " (" + calculateScore(hand.cards) + ")");
+            }
+        }
+
+        dealerHand.add(deck.draw());
+        dealerHand.add(deck.draw());
+
+        send("Dealer's hand: " + dealerHand.getFirst() + " [?]");
+
+        if (dealerHand.getFirst().getRank() == Rank.ACE) {
+            phase = BlackjackPhase.INSURANCE;
+            resetPhaseTimer();
+            send("Dealer shows ACE. .ins to buy insurance (" + getInsuranceTime()/1000 + "s).");
+        } else {
+            startPlayerTurns();
+        }
+    }
+
+    private void startPlayerTurns() {
+        phase = BlackjackPhase.PLAYER_TURNS;
+        resetPhaseTimer();
+        processTurns();
     }
 
     private void processTurns() {
@@ -150,35 +181,35 @@ public class BlackjackGame implements GameInstance {
 
             if (h.finished) {
                 currentHandIndex++;
-                resetTimer();
+                resetPhaseTimer();
                 continue;
             }
 
             if (calculateScore(h.cards) == 21) {
-                ChatUtils.sendPartyMessage(h.playerName + " has 21!");
+                send(h.playerName + " has 21!");
                 h.finished = true;
                 currentHandIndex++;
                 continue;
             }
 
-            ChatUtils.sendPartyMessage("Turn: " + h.playerName + " | Hand: " + h.cards + " (" + calculateScore(h.cards) + ")");
+            send("Turn: " + h.playerName + " | Hand: " + h.cards + " (" + calculateScore(h.cards) + ")");
             return;
         }
 
-        state = GameState.DEALER_TURN;
+        phase = BlackjackPhase.DEALER_TURN;
         handleDealerFinal();
     }
 
     private void handleHit(HandSession hand) {
         hand.cards.add(deck.draw());
         int score = calculateScore(hand.cards);
-        ChatUtils.sendPartyMessage(hand.playerName + " drew " + hand.cards.getLast() + " (Total: " + score + ")");
+        send(hand.playerName + " drew " + hand.cards.get(hand.cards.size() - 1) + " (Total: " + score + ")");
 
         if (score >= 21) {
             hand.finished = true;
             processTurns();
         } else {
-            resetTimer();
+            resetPhaseTimer();
         }
     }
 
@@ -188,14 +219,13 @@ public class BlackjackGame implements GameInstance {
 
         hand.bet *= 2;
         hand.cards.add(deck.draw());
-        ChatUtils.sendPartyMessage(hand.playerName + " DOUBLED: " + calculateScore(hand.cards));
+        send(hand.playerName + " DOUBLED: " + calculateScore(hand.cards));
         hand.finished = true;
         processTurns();
     }
 
     private void handleSplit(HandSession hand) {
         if (hand.isSplitResult || hand.cards.size() != 2) return;
-
         if (hand.cards.get(0).getValue() != hand.cards.get(1).getValue()) return;
 
         if (Economy.takeMoney(hand.playerName, hand.bet)) {
@@ -208,66 +238,71 @@ public class BlackjackGame implements GameInstance {
             splitHand.cards.add(deck.draw());
 
             activeHands.add(currentHandIndex + 1, splitHand);
-
-            ChatUtils.sendPartyMessage("Split successful!");
+            send("Split successful!");
             processTurns();
         }
     }
 
     private void handleDealerFinal() {
         int dScore = calculateScore(dealerHand);
-
-        ChatUtils.sendPartyMessage("Dealer reveals: " + dealerHand + " (" + dScore + ")");
+        send("Dealer reveals: " + dealerHand + " (" + dScore + ")");
 
         if (dealerHand.size() == 2 && dScore == 21) {
-            ChatUtils.sendPartyMessage("Dealer has BLACKJACK!");
-            finalizeResults();
-            return;
+            send("Dealer has BLACKJACK!");
+        } else {
+            while (calculateScore(dealerHand) < 17) {
+                Card drawn = deck.draw();
+                dealerHand.add(drawn);
+                send("Dealer draws: " + drawn + " (" + calculateScore(dealerHand) + ")");
+            }
         }
-
-        while (calculateScore(dealerHand) < 17) {
-            Card drawn = deck.draw();
-            dealerHand.add(drawn);
-            ChatUtils.sendPartyMessage("Dealer draws: " + drawn + " (" + calculateScore(dealerHand) + ")");
-        }
-
         finalizeResults();
     }
 
     private void finalizeResults() {
         int dScore = calculateScore(dealerHand);
-        boolean dBJ = dealerHand.size() == 2 && dScore == 21;
+        boolean dealerBJ = isBlackjack(dealerHand);
 
         for (HandSession h : activeHands) {
             int pScore = calculateScore(h.cards);
-            boolean pBJ = h.cards.size() == 2 && pScore == 21 && !h.isSplitResult;
+            boolean playerBJ = isBlackjack(h.cards);
 
             if (pScore > 21) {
-                ChatUtils.sendPartyMessage(h.playerName + ": BUSTED!");
-            } else if (dBJ && !pBJ) {
-                ChatUtils.sendPartyMessage(h.playerName + ": LOST (Dealer BJ)");
-            } else if (pBJ && !dBJ) {
-                Economy.addMoney(h.playerName, (int) (h.bet * 2.5));
-                ChatUtils.sendPartyMessage(h.playerName + ": BLACKJACK!");
-            } else if (dScore > 21 || pScore > dScore) {
-                Economy.addMoney(h.playerName, h.bet * 2);
-                ChatUtils.sendPartyMessage(h.playerName + ": WON!");
-            } else if (pScore < dScore) {
-                ChatUtils.sendPartyMessage(h.playerName + ": LOST!");
-            } else {
+                send(h.playerName + ": BUSTED! (" + pScore + ")");
+            }
+            else if (playerBJ && dealerBJ) {
                 Economy.addMoney(h.playerName, h.bet);
-                ChatUtils.sendPartyMessage(h.playerName + ": PUSH!");
+                send(h.playerName + ": PUSH (Both have Blackjack)!");
+            }
+            else if (playerBJ) {
+                int payout = (int) (h.bet * 2.5);
+                Economy.addMoney(h.playerName, payout);
+                send(h.playerName + ": BLACKJACK! Wins " + payout);
+            }
+            else if (dealerBJ) {
+                send(h.playerName + ": LOST vs Dealer Blackjack!");
+            }
+            else if (dScore > 21 || pScore > dScore) {
+                Economy.addMoney(h.playerName, h.bet * 2);
+                send(h.playerName + ": WON! (" + pScore + " vs " + dScore + ")");
+            }
+            else if (pScore == dScore) {
+                Economy.addMoney(h.playerName, h.bet);
+                send(h.playerName + ": PUSH (" + pScore + " each)!");
+            }
+            else {
+                send(h.playerName + ": LOST (" + pScore + " vs " + dScore + ")");
             }
         }
 
-        if (dBJ) {
+        if (dealerBJ) {
             insuranceBets.forEach((name, amount) -> {
                 int payout = amount * 3;
                 Economy.addMoney(name, payout);
-                ChatUtils.sendPartyMessage(name + ": Insurance payout +" + payout);
+                send(name + ": Insurance payout +" + payout);
             });
         }
-        stop();
+        stop(StopReason.WIN);
     }
 
     private int calculateScore(List<Card> hand) {
@@ -281,24 +316,20 @@ public class BlackjackGame implements GameInstance {
     }
 
     @Override
-    public void update() {
-        if (!gameActive) return;
-        long elapsed = System.currentTimeMillis() - stateStartTime;
+    protected void onUpdate(long deltaMs) {
+        long elapsedSinceState = now() - phaseStartTime;
 
-        switch (state) {
+        switch (phase) {
             case BETTING -> {
-                if (elapsed > BETTING_TIME_MS) beginMatch();
+                if (elapsedSinceState > getBettingTime()) beginMatch();
             }
             case INSURANCE -> {
-                if (elapsed > INSURANCE_TIME_MS) {
-                    state = GameState.PLAYER_TURNS;
-                    processTurns();
-                }
+                if (elapsedSinceState > getInsuranceTime()) startPlayerTurns();
             }
             case PLAYER_TURNS -> {
-                if (elapsed > TURN_TIME_MS && currentHandIndex < activeHands.size()) {
+                if (elapsedSinceState > getTurnTime()) {
                     HandSession h = activeHands.get(currentHandIndex);
-                    ChatUtils.sendPartyMessage(h.playerName + " timed out! Standing.");
+                    send(h.playerName + " timed out! Standing.");
                     h.finished = true;
                     processTurns();
                 }
@@ -306,9 +337,17 @@ public class BlackjackGame implements GameInstance {
         }
     }
 
-    @Override public boolean isActive() { return gameActive; }
-    @Override public void stop() { gameActive = false; state = GameState.FINISHED; }
-    private void resetTimer() { stateStartTime = System.currentTimeMillis(); }
+    @Override protected void onCleanup(StopReason reason) {}
+
+    @Override
+    protected void onTimeout() {
+        send("Blackjack game timed out due to inactivity.");
+    }
+
+    @Override
+    protected long getTimeoutMs() {
+        return 60000L;
+    }
 
     private static class HandSession {
         final String playerName;
@@ -318,6 +357,4 @@ public class BlackjackGame implements GameInstance {
         boolean isSplitResult = false;
         HandSession(String n, int b) { this.playerName = n; this.bet = b; }
     }
-
-    private enum GameState { BETTING, INSURANCE, PLAYER_TURNS, DEALER_TURN, FINISHED }
 }
